fixed jump to top bug on edit form cancel button click

--- a/lms/static/sass/_discussion.scss
+++ b/lms/static/sass/_discussion.scss
@@ -272,9 +272,13 @@ body.discussion {
 
   .edit-post-form {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     @include clearfix;
     @include box-sizing(border-box);
+
+    h1 {
+      font-size: 20px;
+    }
 
     .form-row {
       margin-top: 20px;
